jasper/force-app/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Questionnaire</label>
    <nameField>
        <displayFormat>QN-{00000}</displayFormat>
        <label>Questionnaire No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>