jasper/force-app/main/default/objects/Questionnaire__c/fields/Complaint_Regarding__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Regarding__c</fullName>
    <label>Complaint Regarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service Experience</fullName>
            </value>
            <value>
                <fullName>VAS (RSA/EW)</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Service Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>