jasper/force-app/main/default/objects/Questionnaire__c/fields/Post_Service_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Post_Service_Feedback__c</fullName>
    <label>Post Service Feedback</label>
    <referenceTo>Post_Service_Feedback__c</referenceTo>
    <relationshipLabel>Questionnaires</relationshipLabel>
    <relationshipName>Qustionnaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>