jasper/force-app/main/default/objects/Questionnaire__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>