jasper/force-app/main/default/objects/Questionnaire__c/fields/Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>Rating_Number__c</fullName>
    <label>Rating Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>