jasper/force-app/main/default/objects/Questionnaire__c/fields/Rating_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Rating_Yes_No__c</fullName>
    <label>Rating_Yes_No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>